refactor: 优化部分代码
修复 Sonar、Codacy 扫描问题：补充部分泛型、调整部分 Boolean 类型判断、将部分不必要的（无集合长度变动） collect(Collectors.toList()); 转换为 toList()