@@ -51,7 +51,6 @@ import top.charles7c.continew.starter.core.util.validate.ValidationUtils;
 import top.charles7c.continew.starter.web.model.R;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * 个人中心 API
@@ -69,6 +68,8 @@ public class UserCenterController {
     private final UserService userService;
     private final UserSocialService userSocialService;
     private final AuthRequestFactory authRequestFactory;
+    private static final String PASSWORD_DECRYPT_FAILED = "当前密码解密失败";
+    private static final String CAPTCHA_EXPIRED = "验证码已失效";
 
     @Operation(summary = "上传头像", description = "用户上传个人头像")
     @PostMapping("/avatar")
@@ -90,7 +91,7 @@ public class UserCenterController {
     public R<Void> updatePassword(@Validated @RequestBody UserPasswordUpdateReq updateReq) {
         String rawOldPassword = ExceptionUtils.exToNull(() -> SecureUtils.decryptByRsaPrivateKey(updateReq
             .getOldPassword()));
-        ValidationUtils.throwIfNull(rawOldPassword, "当前密码解密失败");
+        ValidationUtils.throwIfNull(rawOldPassword, PASSWORD_DECRYPT_FAILED);
         String rawNewPassword = ExceptionUtils.exToNull(() -> SecureUtils.decryptByRsaPrivateKey(updateReq
             .getNewPassword()));
         ValidationUtils.throwIfNull(rawNewPassword, "新密码解密失败");
@@ -105,10 +106,10 @@ public class UserCenterController {
     public R<Void> updatePhone(@Validated @RequestBody UserPhoneUpdateReq updateReq) {
         String rawCurrentPassword = ExceptionUtils.exToNull(() -> SecureUtils.decryptByRsaPrivateKey(updateReq
             .getCurrentPassword()));
-        ValidationUtils.throwIfBlank(rawCurrentPassword, "当前密码解密失败");
+        ValidationUtils.throwIfBlank(rawCurrentPassword, PASSWORD_DECRYPT_FAILED);
         String captchaKey = CacheConstants.CAPTCHA_KEY_PREFIX + updateReq.getNewPhone();
         String captcha = RedisUtils.get(captchaKey);
-        ValidationUtils.throwIfBlank(captcha, "验证码已失效");
+        ValidationUtils.throwIfBlank(captcha, CAPTCHA_EXPIRED);
         ValidationUtils.throwIfNotEqualIgnoreCase(updateReq.getCaptcha(), captcha, "验证码错误");
         RedisUtils.delete(captchaKey);
         userService.updatePhone(updateReq.getNewPhone(), rawCurrentPassword, LoginHelper.getUserId());
@@ -120,10 +121,10 @@ public class UserCenterController {
     public R<Void> updateEmail(@Validated @RequestBody UserEmailUpdateRequest updateReq) {
         String rawCurrentPassword = ExceptionUtils.exToNull(() -> SecureUtils.decryptByRsaPrivateKey(updateReq
             .getCurrentPassword()));
-        ValidationUtils.throwIfBlank(rawCurrentPassword, "当前密码解密失败");
+        ValidationUtils.throwIfBlank(rawCurrentPassword, PASSWORD_DECRYPT_FAILED);
         String captchaKey = CacheConstants.CAPTCHA_KEY_PREFIX + updateReq.getNewEmail();
         String captcha = RedisUtils.get(captchaKey);
-        ValidationUtils.throwIfBlank(captcha, "验证码已失效");
+        ValidationUtils.throwIfBlank(captcha, CAPTCHA_EXPIRED);
         ValidationUtils.throwIfNotEqualIgnoreCase(updateReq.getCaptcha(), captcha, "验证码错误");
         RedisUtils.delete(captchaKey);
         userService.updateEmail(updateReq.getNewEmail(), rawCurrentPassword, LoginHelper.getUserId());
@@ -140,7 +141,7 @@ public class UserCenterController {
             userSocialBind.setSource(source);
             userSocialBind.setDescription(SocialSourceEnum.valueOf(source).getDescription());
             return userSocialBind;
-        }).collect(Collectors.toList());
+        }).toList();
         return R.ok(userSocialBindList);
     }
 
